--- a/tutorial_TeX/RB_MCMC_Archery_Tutorial/RB_MCMC_Archery_Tutorial.tex
+++ b/tutorial_TeX/RB_MCMC_Archery_Tutorial/RB_MCMC_Archery_Tutorial.tex
@@ -3,6 +3,9 @@
 
 \newcommand{\QUEST}{{{\colorbox{Apricot}{\textbf{\textsf{?}}} }}}
 
+\newcommand{\IMPORANT}{{{\colorbox{SpringGreen}{\textbf{\textsf{!}}} }}}
+
+
 \begin{document}
 \renewcommand{\headrulewidth}{0.5pt}
 \headsep = 20pt
