--- a/tutorial_TeX/RB_MCMC_Archery_Tutorial/RB_MCMC_Archery_Tutorial_content.tex
+++ b/tutorial_TeX/RB_MCMC_Archery_Tutorial/RB_MCMC_Archery_Tutorial_content.tex
@@ -247,15 +247,15 @@ At long last, we can write our MCMC algorithm.
 First, we define how often we print to file (\IE monitor); this is called thinning if we do not choose to save every value of our parameter to file.
 If we set the variable \cl{printgen=1}, then we will store the parameter values at every iteration; if we instead choose \cl{printgen=10}, then we'll only save the values every $10^{th}$ step in our Markov chain.
 {\tt \begin{snugshade*}
-\begin{lstlisting}    
+\begin{lstlisting}
+# Write the MH algorithm    
 printgen = 10
 \end{lstlisting}
 \end{snugshade*}}
 We will repeat this resampling procedure many times and iterate the MCMC using a \cl{for} loop (\EG step \ref{sect:MH_alg:step6} in Sect.\ \ref{sect:MH_algorithm}). 
 We will start this part by defining the number of iterations for our MCMC (\cl{reps = 1000}) and writing the first line of our \cl{for} loop. 
 {\tt \begin{snugshade*}
-\begin{lstlisting}    
-# Write the MH algorithm
+\begin{lstlisting}
 reps = 10000 
 for(rep in 1:reps){
 \end{lstlisting}
@@ -265,12 +265,15 @@ Additionally, it is good style to make our loops readable by indenting the conte
 We recommend that you use 4 spaces to represent these indents.
 
 For our MCMC algorithm, the first thing we do is generate a new value of $\mu^\prime$ to evaluate (step \ref{sect:MH:step2} of Sect.\ \ref{sect:MH_algorithm}).
-We'll simply propose a new value of $\mu$ from a the prior distribution.
-Note that in this first example we do not condition new parameter values on the current value.
+We'll propose a new value of $\mu$ by drawing a random number from a uniform window and then adding this random number to the current value (\IE centered on the previous value).
+The value of \cl{delta} defines the width of the uniform window from which we draw new values.
+Thus, if \cl{delta} is large, then the proposed values are more likely to be very different from the current value of $\mu$.
+Conversely, if \cl{delta} is small, then the proposed values are more likely to be very close to the current value of $\mu$.
+By changing the value of \cl{delta} we can tune the behavior of the proposal, and therefore \cl{delta} is called a \emph{tuning parameter}.
 {\tt \begin{snugshade*}
 \begin{lstlisting}    
     # Propose a new value of p
-    mu_prime <- rexp(n=1, alpha)[1]
+    mu_prime <- mu + runif(n=1,-delta,delta)[1]
 \end{lstlisting}
 \end{snugshade*}}
 
@@ -294,7 +297,7 @@ Then, we accept the proposal with probability $R$ and reject otherwise (step \re
 \end{lstlisting}
 \end{snugshade*}}
 
-Finally, we store the current value of $\mu$ in our log file (step \ref{sect:MH:step5} of Sect.\ \ref{sect:MH_algorithm}).
+\pagebreak Finally, we store the current value of $\mu$ in our log file (step \ref{sect:MH:step5} of Sect.\ \ref{sect:MH_algorithm}).
 Here, we actually check if we want to store the value during this iteration.
 {\tt \begin{snugshade*}
 \begin{lstlisting}
@@ -335,16 +338,16 @@ There are other parameters, such as the posterior mean and the 95\% HPD (highest
 
 \section{More on Moves: Tuning and Weights}\label{sect:More_on_Moves}
 
-In the previous example we hard coded a single move updating the variable $\mu$ by drawing a new value from the prior.
-There are actually many other ways how to propose new values; some of which are more efficient than others.
+In the previous example we hard coded a single move updating the variable $\mu$ by drawing a new value from a sliding window.
+There are other ways how to propose new values; some of which are more efficient than others.
 
-First, let us rewrite the MCMC loop so that instead we call a function, which we name \cl{move\_prior} for simplicity, that performs the move:
+First, let us rewrite the MCMC loop so that instead we call a function, which we name \cl{move\_slide} for simplicity, that performs the move:
 {\tt \begin{snugshade*}
 \begin{lstlisting}    
 for (rep in 1:reps){
     
     # call uniform move
-    move_prior(1)
+    move_slide(1)
     
     if ( (rep % printgen) == 0 ) {
         # Write the samples to a file
@@ -357,48 +360,15 @@ for (rep in 1:reps){
 \end{lstlisting}
 \end{snugshade*}}
 
-\subsection{Prior move}
-Now we need to actually write the \cl{move\_prior} function.
+\subsection{Slide move}
+Now we need to actually write the \cl{move\_slide} function.
 We mostly just copy the code we had before into a dedicated function
-{\tt \begin{snugshade*}
-\begin{lstlisting}    
-function move_prior(weight) {
-
-    for (i in 1:weight) {
-        # Propose a new value of mu
-        mu_prime <- rexp(n=1, alpha)[1]
-
-        # Compute the acceptance probability
-        R = ( likelihood(mu_prime)/likelihood(mu) ) * ( prior(mu_prime)/prior(mu) ) 
-
-        # Accept or reject the proposal
-        u = runif(1,0,1)[1] 
-        if(u < R){
-            # Accept the proposal
-            mu = mu_prime 
-        }
-    }
-}
-\end{lstlisting}
-\end{snugshade*}}
-There are a few things to consider in the function \cl{move\_prior}.
-First, we do not have a return value because the move simply changes the variable $\mu$ if the move is accepted.
-Second, we expect an argument called \cl{weight} which will tell us how often we want to use this move.
-Otherwise, this function does exactly the same what was inside the for loop previously.
-
-(Note that you need to define this function before the for loop in your script).
-% TODO: verify if this separate script is provided. I don't think we need to. (TAH)
-
-
-\subsection{Sliding-window move}
-As a second move we will write a sliding-window move.
-The sliding-window moves propose an update by drawing a random number from a uniform distribution and then adding this random number to the current value (\IE centered on the previous value).
 {\tt \begin{snugshade*}
 \begin{lstlisting}    
 function move_slide(delta, weight) {
 
     for (i in 1:weight) {
-        # Propose a new value of p
+        # Propose a new value of mu
         mu_prime <- mu + runif(n=1,-delta,delta)[1]
 
         # Compute the acceptance probability
@@ -414,10 +384,13 @@ function move_slide(delta, weight) {
 }
 \end{lstlisting}
 \end{snugshade*}}
-In addition to the weight of the move, this move has another argument, \cl{delta}.
-The argument \cl{delta} defines the width of the uniform window from which we draw new values.
-Thus, if \cl{delta} is large, then the proposed values are more likely to be very different from the current value of $\mu$.
-Conversely, if \cl{delta} is small, then the proposed values are more likely to be very close to the current value of $\mu$.
+There are a few things to consider in the function \cl{move\_slide}.
+First, we do not have a return value because the move simply changes the variable $\mu$ if the move is accepted.
+Second, in addition to the tuning parameter \cl{delta}, we expect an argument called \cl{weight} which will tell us how often we want to use this move.
+Otherwise, this function does exactly the same what was inside the for loop previously.
+
+(Note that you need to define this function before the for loop in your script).
+% TODO: verify if this separate script is provided. I don't think we need to. (TAH)
 
 %\impmark 
 {\begin{framed}
@@ -428,8 +401,8 @@ There is, {\it a priori}, no good method for knowing what values of \cl{delta} a
 However, there are some algorithms implemented in \RevBayes, called \emph{auto-tuning}, that will estimate good values for \cl{delta}.
 
 \subsection{Scaling move}
-As a third and final move we will write a scaling move.
-The scaling move proposes an update by drawing a random number from a uniform(-0.5,0.5) distribution, exponentiating the random number, and then multiplying this scaling factor by the current value.
+As another move we will write a scaling move.
+The scaling move proposes an update by drawing a random number from a Uniform(-0.5,0.5) distribution, exponentiating the random number, and then multiplying this scaling factor by the current value.
 An interesting feature of this move is that it is not symmetrical and thus needs a Hastings ratio.
 The Hastings ratio is rather trivial in this case, and one only needs to multiply the acceptance rate by the scaling factor.
 {\tt \begin{snugshade*}
@@ -466,7 +439,7 @@ It will be very useful for you to understand these moves.
 \subsection{Exercise 2}
 
 \begin{enumerate}[label=\textnormal{Step \arabic*)}]
-	\item Rewrite your previous script to include these three different moves now.
+	\item Rewrite your previous script to include these two different moves now.
 	\item Then, run the script to estimate the posterior distribution of $\mu$ again.
 	\item Look at the output in \Tracer.
 	\item Are the distributions, mean and credible interval the same?
