--- a/tutorial_TeX/RB_CTMC_Tutorial/figures/gtrg_graphical_model.tex
+++ b/tutorial_TeX/RB_CTMC_Tutorial/figures/gtrg_graphical_model.tex
@@ -1,4 +1,47 @@
-\definecolor{shc}{RGB}{183,207,237}
+% preamble
+
+\documentclass[10pt]{article}
+\usepackage[paperwidth=40in, paperheight=40in]{geometry}
+\usepackage[usenames]{color} %used for font color
+\usepackage{amssymb} %maths
+\usepackage{amsmath} %maths
+\usepackage[utf8]{inputenc} %useful to type directly diacritic characters
+
+%%% Sans serif text font
+\usepackage[scaled]{helvet}
+\renewcommand*\familydefault{\sfdefault}\usepackage[T1]{fontenc}
+%%%
+
+\usepackage{skull}
+\usepackage{tikz}
+\usetikzlibrary{positioning}
+\usetikzlibrary{arrows}
+\usetikzlibrary{fit}
+\usetikzlibrary{calc}
+\usetikzlibrary{automata}
+\usetikzlibrary{decorations.markings}
+\usetikzlibrary{decorations.pathreplacing}
+
+\tikzset{>=latex}
+\tikzstyle{snode}=[black,draw=black,line width=1.5pt,shape=circle,fill=white,minimum size=8mm]
+\tikzstyle{obnode}=[black,draw=black,line width=1.5pt,shape=circle,fill=black!20!white,minimum size=8mm]
+\tikzstyle{detnode}=[black,draw=black,line width=1.5pt,densely dotted,shape=circle,fill=white,minimum size=8mm]
+\tikzstyle{constnode}=[black,draw=black,line width=1.5pt,shape=rectangle,fill=white,minimum size=8mm]
+\tikzstyle{mincnode}=[black,draw=black,line width=0.75pt,shape=rectangle,fill=white,minimum size=3mm]
+\tikzstyle{blnode}=[white,draw=black,line width=1pt,shape=circle,fill=black,minimum size=1mm,font=\scriptsize,inner sep=1pt]
+\tikzstyle{ylnode}=[black,draw=black,line width=1pt,shape=circle,fill=yellow,minimum size=1mm,font=\scriptsize,inner sep=1pt]
+\tikzstyle{taro}=[->,line width=2pt,color=black]
+\tikzstyle{thintaro}=[->,line width=0.75pt,color=black]
+\tikzstyle{dtaro}=[->,line width=2pt, densely dotted,color=black]
+\tikzstyle{smod}=[black, draw=black, line width=2pt, fill=white, shape=rectangle, rounded corners, minimum size=10mm, minimum width=20mm]
+\tikzstyle{obmod}=[black, draw=black, line width=2pt, fill=black!20!white, shape=rectangle, rounded corners, minimum size=10mm, minimum width=20mm, minimum width=20mm]
+
+\definecolor{shc}{RGB}{238,224,229}
+\definecolor{shc2}{RGB}{182,152,195}
+\definecolor{brnt}{RGB}{221,132,13}
+
+\begin{document}
+\[\definecolor{shc}{RGB}{183,207,237}
 \begin{tikzpicture}
 \node[obnode] (x) at (-5,1) {$seq$};
 \node (x_dist) at ($(x)+(0.8,-0.7)$) {PhyloCTMC};
@@ -68,7 +111,7 @@
 \node (l6) at (4,4.2) [right]{\tt er $\sim$ dnDirichlet( alpha1 ) };
 \node (l7) at (4,3.85) [right]{\tt pi $\sim$ dnDirichlet( alpha2 ) };
 \node (l8) at (4,3.5) [right]{\tt Q := fnGTR(er, pi) };
-\node (l8) at (4,2.95) [right]{\tt m\_alpha <- ln(2.0)};
+\node (l8) at (4,2.95) [right]{\tt m\_alpha <- ln(5.0)};
 \node (l8) at (4,2.6) [right]{\tt sd\_alpha <- 0.587405};
 \node (l8) at (4,2.25) [right]{\tt alpha $\sim$ dnLognormal( m\_alpha, sd\_alpha )};
 \node (l8) at (4,1.9) [right]{\tt sr := fnDiscretizeGamma( alpha, alpha, 4, false )};
@@ -76,4 +119,5 @@
 \node (l9) at (4,0.6) [right]{\tt seq $\sim$ dnPhyloCTMC( tree=psi, Q=Q, pInv=p\_invar,  };
 \node (l9) at (7.6,0.25) [right]{\tt siteRates=sr, type="DNA" ) };
 \node (l10) at (4,-0.1) [right]{\tt seq.clamp( data ) };
-\end{tikzpicture}
+\end{tikzpicture}\]
+\end{document}
